--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "next": "15.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
